# vo

./: .gitmodules  README.md
cpp/: CMakeLists.txt  PLAN.md  TODO.md  cmath.lang  cstd12.lang  cstdio16.lang  ffi.lang  sieve.lang  sieve_map.lang  stdio.lang  stdlib.lang
cpp/src/: main.cpp
cpp/src/ast/: nodes.hpp
cpp/src/interpreter/: environment.cpp  interpreter.cpp  interpreter.hpp  value.cpp  value.hpp
cpp/src/lexer/: lexer.cpp  lexer.hpp  token.hpp
cpp/src/parser/: parser.cpp  parser.hpp
cpp/tests/: color.lang
interp/: CMakeLists.txt  TODO.md  alias.vo  demo_colors.vo  demo_vtkit.vo  sieve.vo  sieve_list.vo  sieve_map.vo  silly.vo
interp/examples/: hello_world.vo
interp/examples/wolf/: CLAUDE.md  config.vo  main.vo  map.vo  player.vo  render.vo
interp/game/: config.vo  map.vo  player.vo
interp/lib/: cmath.vo  cstd12.vo  cstdio.vo  cstdio16.vo  cstdlib.vo  cstring.vo  ffi.vo  logic.vo  loops.vo  metalib.vo  stdio.vo  stdlib.vo  vtkit.vo
interp/src/: main.cpp
interp/src/interpreter/: environment.hpp  interpreter.cpp  interpreter.hpp  value.cpp  value.hpp
interp/src/lexer/: lexer.cpp  token.hpp
interp/src/parser/: parser.cpp  parser.hpp
interp/tests/: color.vo  test_all.vo  test_cmath.vo  test_cstd12.vo  test_cstdio.vo  test_cstdio16.vo  test_cstdlib.vo  test_dynmember.vo  test_ffi.vo  test_float.vo  test_iter.vo  test_logic.vo  test_loop.vo  test_loops.vo  test_metalib.vo  test_oo.vo  test_private.vo  test_proto.vo  test_stdlib.vo  test_unicode.vo
interp/wolf_game_demo/: main.vo  render.vo
planning/: PUBLISH.md  TODO.md  ast-api.md  ast-visualisation.md  cache-aware-layout.md  callable-sigil.md  code-size.md  default-params.md  done.md  drop-commas.md  errors.md  ffi-builtins.md  hash-arrays.md  homoiconicity.md  immutability.md  infix-syntax.md  lazy-boolean.md  lib-management.md  localisation.md  operators-as-callables.md  profiling.md  publication-roadmap.md  runtime-controls.md  sdl3-binding.md  stdio-design.md  tail-call.md  unicode_plan.md  unified-dispatch.md  visitor-dispatch.md
vopack/: vopack
